# fpdf2-textindex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/actions/setup-uv/: action.yml
.github/workflows/: changelog.yml  ci.yml  docs.yml  publish-test.yml  release.yml  test.yml
docs/: make.py  robots.txt
docs/pdoc_template/: frame.html.jinja2
example/: textindex_figures.py
fpdf2_textindex/: __init__.py  alias.py  concordance.py  constants.py  errors.py  interface.py  md_emphasis.py  parser.py  pdf.py  renderer.py  utils.py  version.py
fpdf2_textindex/_fpdf/: __init__.py  _fpdf.py  line_break.py
fpdf2_textindex/interface/: __init__.py  abc.py  alias.py  cross_reference.py  entry.py  enums.py  label_path.py  link_location.py  node.py  reference.py
scripts/: pre_commit_md_report.py  release.sh
test/: concordance_test.py  conftest.py  example_test.py  fpdf_test.py  md_emphasis_test.py  monkeypatch_test.py  parser_test.py  renderer_test.py  smoke_test.py
test/data/: concordance.tsv
